Added nuget bits

--- a/src/CleanArchitecture.Scaffolder/CleanArchitecture.Scaffolder.csproj
+++ b/src/CleanArchitecture.Scaffolder/CleanArchitecture.Scaffolder.csproj
@@ -5,11 +5,30 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>sln-generator</ToolCommandName>
+    <Authors>Billy Mumby</Authors>
+    <Copyright>Copyright 2021 (c) Billy Mumby. All rights reserved.</Copyright>
+
+    <Description>A tool to help generate .net project's by scaffolding a full solution</Description>
+
+    <!-- NuGet settings -->
+    <PackageId>CleanArchitecture.Scaffolder</PackageId>
+    <PackageTags>Tool;Dotnet;Cli;Console;Tempaltes;csproj;sln</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/mumby0168/CleanArchitecture.Scaffolder</PackageProjectUrl>
+    <PackageIcon>icon.png</PackageIcon>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/mumby0168/CleanArchitecture.Scaffolder</RepositoryUrl>
   </PropertyGroup>
 
 
   <ItemGroup>
     <PackageReference Include="Spectre.Console" Version="0.42.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="icon.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
