--- a/.github/workflows/nuget-release.yml
+++ b/.github/workflows/nuget-release.yml
@@ -1,7 +1,6 @@
 name: Release Package Version
 on:
   push:
-    #branches: [ main ]
     tags:
      - v*     
 
@@ -33,7 +32,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
-        include-prerelease: true
+        include-prerelease: false
         
     - name: Restore dependencies
       run: dotnet restore ./$SLN_NAME.sln
